hphp/hack/test/typecheck/nameof/alias.php.exp
File "alias.php", line 7, characters 10-10:
Expected a `class` but got a type alias. (Naming[2052])
  File "alias.php", line 4, characters 6-6:
  Alias definition is here.
File "alias.php", line 8, characters 10-10:
Expected a `class` but got a type alias. (Naming[2052])
  File "alias.php", line 5, characters 6-6:
  Alias definition is here.
